--- a/_layouts /default.html
+++ b/_layouts /default.html
@@ -49,10 +49,10 @@
   <div class="nav">
     {% if page.lang == "ua" %}
       <a href="index.md">Резюме 🇺🇦</a>
-      <a href="portfolio_ua.md">Портфоліо</a>
-      <a href="resume_en.md">English 🇬🇧</a>
+      <a href="portfolio.md">Портфоліо</a>
+      <a href="index_en.md">English 🇬🇧</a>
     {% elsif page.lang == "en" %}
-      <a href="resume_en.md">Resume 🇬🇧</a>
+      <a href="index_en.md">Resume 🇬🇧</a>
       <a href="portfolio_en.md">Portfolio</a>
       <a href="index.md">Українська 🇺🇦</a>
     {% endif %}
