--- a/_layouts /default.html
+++ b/_layouts /default.html
@@ -2,7 +2,7 @@
 <html lang="uk">
 <head>
   <meta charset="UTF-8">
-  <title>{{ page.title | default: site.title }}</title>
+  <!-- title>{{ page.title | default: site.title }}</title -->
   <style>
     body {
       font-family: Arial, sans-serif;
